updated class and lecturer unique count

--- a/DSS-SAW-Mark6_DatasetAnalysis.ipynb
+++ b/DSS-SAW-Mark6_DatasetAnalysis.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "[20097 rows x 16 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "[20097 rows x 13 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -633,6 +633,220 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Prof. Dr. Ir EDI NOERSASONGKO, M.Kom - AF201703'\n",
+      " 'SUDARYANTO, M.Kom - AF201702' 'Dr.  ABDUL SYUKUR - A11.54205'\n",
+      " 'EDY MULYANTO, SSi, M.Kom - A11.54302'\n",
+      " 'ZAENAL ARIFIN, SE, M.Kom - AF201703'\n",
+      " 'ZAENAL ARIFIN, SE, M.Kom - AF201702'\n",
+      " 'Dr. YUVENTIUS TYAS CATUR PRAMUDI, S.Si., M.Kom - A11.54506'\n",
+      " 'ERLIN DOLPHINA, SH, MM - A11.54205'\n",
+      " 'PURWANTO, S.Si, M.Kom, Ph.D - A11.54303'\n",
+      " 'PURWANTO, S.Si, M.Kom, Ph.D - A11.54812'\n",
+      " 'PURWANTO, S.Si, M.Kom, Ph.D - A11.54302'\n",
+      " 'MOHAMAD SIDIQ, S.Si, M.Kom - A11.54506'\n",
+      " 'Dr. ARIS MARJUNI, S.Si., M.Kom - A11.54508'\n",
+      " 'Dr. ARIS MARJUNI, S.Si., M.Kom - A11.54303'\n",
+      " 'EDI FAISAL, S.Kom, M.Kom - A11.54403'\n",
+      " 'EDI FAISAL, S.Kom, M.Kom - AF201704'\n",
+      " 'ACHMAD WAHID KURNIAWAN, S.Si, M.Kom - A11.54101'\n",
+      " 'Dr. Ir. ARIPIN, M.Kom - A11.54505' 'AYU PERTIWI, S.Kom, MT - A11.54828'\n",
+      " 'AYU PERTIWI, S.Kom, MT - A11.54504'\n",
+      " 'DR. FIKRI BUDIMAN, M.Kom - A11.54506'\n",
+      " 'Dr M. ARIEF SOELEMAN, M.Kom - A11.54505'\n",
+      " 'Dr M. ARIEF SOELEMAN, M.Kom - A11.54403' 'MUSLIH, M.Kom - AF201704'\n",
+      " 'Dr. NOVA RIJATI, S.Si., M.Kom - A11.54303'\n",
+      " 'T. SUTOJO, S.Si, M.Kom - A11.54302' 'HERU LESTIAWAN, M.Kom - A11.54703'\n",
+      " 'HERU LESTIAWAN, M.Kom - A11.54506' 'HERU LESTIAWAN, M.Kom - AF201704'\n",
+      " 'USMAN SUDIBYO, SSi.,M.KOM - A11.54101'\n",
+      " 'USMAN SUDIBYO, SSi.,M.KOM - A11.54302'\n",
+      " 'Dr. AHMAD ZAINUL FANANI, SSi, M.Kom - A11.54812'\n",
+      " 'Dr. HERIBERTUS HIMAWAN, S.Kom., M.Kom - A11.54828'\n",
+      " 'Dr. HERIBERTUS HIMAWAN, S.Kom., M.Kom - A11.54506'\n",
+      " 'Dr. MULJONO, S.Si, M.Kom - A11.54815'\n",
+      " 'Dr. MULJONO, S.Si, M.Kom - A11.54303'\n",
+      " 'Dr.  BUDI HARJO, M.Kom - A11.54505'\n",
+      " 'ACHMAD BASARI, SS., M.Pd. - N201702'\n",
+      " 'NOOR AGENG SETIYANTO, M.Kom - AF201704'\n",
+      " 'NOOR AGENG SETIYANTO, M.Kom - A11.54314'\n",
+      " 'NOOR AGENG SETIYANTO, M.Kom - A11.54506'\n",
+      " 'DR SOLICHUL HUDA, M.Kom - AF201702'\n",
+      " 'DR SOLICHUL HUDA, M.Kom - A11.54403'\n",
+      " 'ERNA ZUNI ASTUTI, M.Kom - A11.54101'\n",
+      " 'ERNA ZUNI ASTUTI, M.Kom - A11.54302'\n",
+      " 'Dr. PUJIONO, S.Si., M.Kom - A11.54101'\n",
+      " 'Dr. PUJIONO, S.Si., M.Kom - A11.54302'\n",
+      " 'Ir. SITI HADIATI NUGRAINI, M.Kom, Ph.D. - AF201702'\n",
+      " 'FERI AGUSTINA, M.Kom - A11.54508' 'FERI AGUSTINA, M.Kom - A11.54506'\n",
+      " 'FERI AGUSTINA, M.Kom - A11.54306' 'SRI WINARNO, Ph.D - A11.54703'\n",
+      " 'ELKAF RAHMAWAN P., M.Kom - A11.54501'\n",
+      " 'ELKAF RAHMAWAN P., M.Kom - A11.54835' 'SUPRAYOGI, M.Kom - A11.54105'\n",
+      " 'SUPRAYOGI, M.Kom - AF201704' 'SUPRAYOGI, M.Kom - A11.54314'\n",
+      " 'MY. TEGUH SULISTYONO, M.Kom - AF201703'\n",
+      " 'DEWI AGUSTINI SANTOSO, M.Kom - A11.54505'\n",
+      " 'AMIQ FAHMI, S. Kom., M.Kom. - AF201703'\n",
+      " 'ETIKA KARTIKADARMA, M.Kom - AF201703'\n",
+      " 'ETIKA KARTIKADARMA, M.Kom - A11.54828'\n",
+      " 'ETIKA KARTIKADARMA, M.Kom - A11.54504'\n",
+      " 'Ir. HERU AGUS SANTOSO, S.Kom, M.Kom, Ph.D - A11.54607'\n",
+      " 'Ir. HERU AGUS SANTOSO, S.Kom, M.Kom, Ph.D - A11.54823'\n",
+      " 'L.BUDI HANDOKO, M.Kom - A11.54835' 'L.BUDI HANDOKO, M.Kom - A11.54501'\n",
+      " 'SUHARIYANTO, M.Kom - AF201703' 'ANDI HALLANG LEWA, S.S., M.M - U201701'\n",
+      " 'AFFANDY, M.Kom, Ph.D. - A11.54703' 'AJIB SUSANTO, M.Kom - A11.54608'\n",
+      " 'AJIB SUSANTO, M.Kom - A11.54314' 'IFAN RIZQA, M.Kom - A11.54506'\n",
+      " 'IFAN RIZQA, M.Kom - A11.54105' 'DR RURI SUKO BASUKI, M.Kom - AF201702'\n",
+      " 'Prof. Dr. PULUNG NURTANTIO ANDONO, S.T., M.Kom - A11.54703'\n",
+      " 'SETYO PRASIYANTO CAHYONO, SS., M.Pd. - U201701'\n",
+      " 'SLAMET SUDARYANTO N., ST, M.Kom - A11.54504'\n",
+      " 'SLAMET SUDARYANTO N., ST, M.Kom - A11.54505'\n",
+      " 'HANNY HARYANTO, S.Kom, M.T - A11.54837'\n",
+      " 'HANNY HARYANTO, S.Kom, M.T - A11.54503'\n",
+      " 'UMI ROSYIDAH, S.Kom, M.T - A11.54504'\n",
+      " 'UMI ROSYIDAH, S.Kom, M.T - A11.54505'\n",
+      " 'Dr. SENDI NOVIANTO, S.Kom, M.T - A11.54306'\n",
+      " 'Dr. SENDI NOVIANTO, S.Kom, M.T - A11.54403'\n",
+      " 'Dr. SENDI NOVIANTO, S.Kom, M.T - AF201704'\n",
+      " 'CAHAYA JATMOKO, M.Kom - A11.54608' 'CAHAYA JATMOKO, M.Kom - A11.54314'\n",
+      " 'CAHAYA JATMOKO, M.Kom - AF201704' 'DAURAT SINAGA, M.Kom - A11.54608'\n",
+      " 'ARIES SETIAWAN, M.Kom - A11.54505'\n",
+      " 'Dr. KHAFIIZH HASTUTI, M.Kom - A11.54607'\n",
+      " 'Dr. KHAFIIZH HASTUTI, M.Kom - AF201702'\n",
+      " 'Dr. KHAFIIZH HASTUTI, M.Kom - AF201703' 'ABDUSSALAM, M.Kom - A11.54403'\n",
+      " 'ABDUSSALAM, M.Kom - A11.54501' 'ADI PRIHANDONO, M.Kom - A11.54205'\n",
+      " 'ABU SALAM, M.Kom - A11.54314' 'ABU SALAM, M.Kom - A12.66621'\n",
+      " 'DR. ARRY MAULANA SYARIF, S.S, M.Kom - A11.54508'\n",
+      " 'DYAH GAYATRI, DRA - N2017054'\n",
+      " \"HJ. LILIK MUSFIROTUN NI'MAH, M.Sy - N2017051\"\n",
+      " 'ROBERTUS HERI SU, S.Si,M.Si - A11.54303'\n",
+      " 'ROBERTUS HERI SU, S.Si,M.Si - A11.54101'\n",
+      " 'YANI PARTI ASTUTI, S.Si, M.Kom - A11.54101'\n",
+      " 'YANI PARTI ASTUTI, S.Si, M.Kom - A11.54812'\n",
+      " 'YANI PARTI ASTUTI, S.Si, M.Kom - N201706'\n",
+      " 'MUHAMAD SYARIFUDIN, S.Ag., M.Pd.I - N2017051'\n",
+      " 'LIYA UMAROH, M.Hum - N201702' 'MUHTADI, S.Si, M.Kom - A11.54101'\n",
+      " 'TIM PENGAMPU PPKN - N201707' 'TIM PENGAMPU PPKN - N201706'\n",
+      " 'ANISA LARASSATI, S.S, M.Ling - N201702'\n",
+      " 'Dra SOEISNIWATI LIDWINA , M.Pd. - N201701'\n",
+      " 'DIDING DARMUDI, Lc., M.Si. - N2017051' 'TIM PENGAMPU KP FIK - A11.54702'\n",
+      " 'TIM PENGAMPU BK FIK - A11.54701' 'TIM PENGAMPU PA/TA FIK - A11.54705'\n",
+      " 'TIM PENGAMPU PA/TA FIK - A11.54801'\n",
+      " 'Dipl.-Wi.-Ing.  B.J RIDWAN HARTONO - U201701'\n",
+      " 'RAMA ARIA MEGANTARA, M.Kom - A11.54501'\n",
+      " 'RAMA ARIA MEGANTARA, M.Kom - A11.54835'\n",
+      " 'RAMA ARIA MEGANTARA, M.Kom - A11.54403'\n",
+      " 'Dr. FARRIKH AL ZAMI, M.Kom - A12.66621'\n",
+      " 'Dr. FARRIKH AL ZAMI, M.Kom - A11.54302'\n",
+      " 'FAUZI ADI RAFRASTARA, M.CS - A11.54505'\n",
+      " 'FAUZI ADI RAFRASTARA, M.CS - A11.54504'\n",
+      " 'CHRISTY ATIKA SARI, M.Kom - A11.54821'\n",
+      " 'CHRISTY ATIKA SARI, M.Kom - U201704'\n",
+      " 'DEDDY AWARD WIDYA LAKSANA, M.Pd - AF201702'\n",
+      " 'Dr. CATUR SUPRIYANTO, S. Kom, M.CS - A11.54303'\n",
+      " 'Dr. RICARDUS ANGGI PRAMUNENDAR, S.Kom,. M.CS - A11.54821'\n",
+      " 'DEFRI KURNIAWAN, M.Kom - A11.54504' 'DEFRI KURNIAWAN, M.Kom - A11.54505'\n",
+      " 'DEFRI KURNIAWAN, M.Kom - AF201703' 'DEFRI KURNIAWAN, M.Kom - A11.54503'\n",
+      " 'CHOIRUL ANAM, M.Pd.I - N2017051'\n",
+      " 'Dr. GURUH FAJAR SHIDIK, S.Kom., M.Cs - A11.54821'\n",
+      " 'Dr. RIYANA DEWI, M.Pd - N201702'\n",
+      " 'FAHRI FIRDAUSILLAH, S.Kom, M.CS - A11.54608'\n",
+      " 'ERWIN YUDI HIDAYAT, S.Kom, M.CS - A11.54503'\n",
+      " 'ERWIN YUDI HIDAYAT, S.Kom, M.CS - A11.54302'\n",
+      " 'ADHITYA NUGRAHA, S.Kom, M.CS - A11.54835'\n",
+      " 'ADHITYA NUGRAHA, S.Kom, M.CS - A11.54205'\n",
+      " 'ADHITYA NUGRAHA, S.Kom, M.CS - A11.54607'\n",
+      " 'ADHITYA NUGRAHA, S.Kom, M.CS - A11.54501'\n",
+      " 'JUNTA ZENIARJA, M.Kom - A11.54823' 'JUNTA ZENIARJA, M.Kom - A11.54105'\n",
+      " 'EKO HARI RACHMAWANTO, M.Kom - AF201702'\n",
+      " 'EKO HARI RACHMAWANTO, M.Kom - A11.54821'\n",
+      " 'EKO HARI RACHMAWANTO, M.Kom - AF201704'\n",
+      " 'EKO HARI RACHMAWANTO, M.Kom - U201704'\n",
+      " 'ARDYTHA LUTHFIARTA, M.Kom - A11.54823'\n",
+      " 'ARDYTHA LUTHFIARTA, M.Kom - AF201702'\n",
+      " 'ARDYTHA LUTHFIARTA, M.Kom - A11.54504'\n",
+      " 'DE ROSAL, IGNATIUS MOSES SETIADI, M.Kom - A11.54306'\n",
+      " 'DE ROSAL, IGNATIUS MOSES SETIADI, M.Kom - A11.54105'\n",
+      " 'NOVITA KURNIA NINGRUM, M. Kom - AF201703'\n",
+      " 'NOVITA KURNIA NINGRUM, M. Kom - A11.54703'\n",
+      " 'SISWO PRANOTO, S.Sn - AF201702' 'IMANUEL HARKESPAN, M.Kom - A11.54314'\n",
+      " 'IMANUEL HARKESPAN, M.Kom - A11.54306' 'CHAERUL UMAM, M.Kom - A11.54835'\n",
+      " 'DWI PUJI PRABOWO, S.Sn,M.Kom - U201704'\n",
+      " 'DWI PUJI PRABOWO, S.Sn - U201704'\n",
+      " 'DANANG WAHYU UTOMO, M.Kom - A11.54105'\n",
+      " 'DANANG WAHYU UTOMO, M.Kom - A11.54703'\n",
+      " 'DANANG WAHYU UTOMO, M.Kom - A11.54505'\n",
+      " 'DANANG WAHYU UTOMO, M.Kom - A11.54403'\n",
+      " 'DANANG WAHYU UTOMO, M.Kom - A11.54608'\n",
+      " 'DANANG WAHYU UTOMO, M.Kom - A11.54306'\n",
+      " 'EGIA ROSI SUBHIYAKTO, M.Kom - A11.54828'\n",
+      " 'EGIA ROSI SUBHIYAKTO, M.Kom - A11.54504'\n",
+      " 'EGIA ROSI SUBHIYAKTO, M.Kom - A11.54306'\n",
+      " 'MARYA ULFA, S.Pd, M.Pd. - N201701'\n",
+      " 'Prof. Dr. SUPRIADI RUSTAD, M.Si - AF201702'\n",
+      " 'MUHAMAD AKROM, M.Si - U201704'\n",
+      " 'CINANTYA PARAMITA, S.Kom., M.Eng - AF201702'\n",
+      " 'CINANTYA PARAMITA, S.Kom., M.Eng - A11.54303'\n",
+      " 'APRILYANI NUR SAFITRI, M.Kom - A11.54506'\n",
+      " 'GUSTINA ALFA TRISNAPRADIKA, M.Kom - A11.54821'\n",
+      " 'GUSTINA ALFA TRISNAPRADIKA, M.Kom - A11.54101'\n",
+      " 'Pdt. DR. ANTONIO SARTONO, S.Pd.M.Th - N2017053'\n",
+      " 'ZAHROTUL UMAMI, M.I.Kom - AF201703' 'WISE HEROWATI, M.Kom - A11.54821'\n",
+      " 'WISE HEROWATI, M.Kom - A11.54101' 'WILDANIL GHOZI, M.Kom - A11.54501'\n",
+      " 'WILDANIL GHOZI, M.Kom - A11.54403'\n",
+      " 'Dr. WAHYU AJI EKO PRABOWO, S.Si, M.T - A11.54202'\n",
+      " 'Dr. WAHYU AJI EKO PRABOWO, S.Si, M.T - A11.54302'\n",
+      " 'Dr. WAHYU AJI EKO PRABOWO, S.Si, M.T - A11.54101'\n",
+      " 'Dr. ZAENUDIN, M.Ag - N2017051' 'FALDIN BAEN, M.Pd.I. - N2017051'\n",
+      " 'DANNY OKA RATMANA, M.Kom - A11.54314'\n",
+      " 'TITIEN SUHARTINI SUKAMTO, S.Kom, M.Eng. - A11.54703'\n",
+      " 'BAYU ADE PRABOWO, SS., M.S - N201702'\n",
+      " 'DENY SALVANA ERVAN, M.Kom - AF201703'\n",
+      " 'GALUH WILUJENG SARASWATI, M.CS - A11.54508'\n",
+      " 'GALUH WILUJENG SARASWATI, M.CS - A11.54303'\n",
+      " 'GALUH WILUJENG SARASWATI, M.CS - U201704'\n",
+      " 'MUHAMMAD SYAIFUR ROHMAN, M.CS - A11.54306'\n",
+      " 'MUHAMMAD SYAIFUR ROHMAN, M.CS - A11.54105'\n",
+      " 'NURUL ANISA SRI WINARSIH, S.Kom, M.Cs - N201702'\n",
+      " 'NURUL ANISA SRI WINARSIH, S.Kom, M.Cs - A11.54508'\n",
+      " 'NURUL ANISA SRI WINARSIH, S.Kom, M.Cs - U201704'\n",
+      " 'NURUL ANISA SRI WINARSIH, S.Kom, M.Cs - A11.54105'\n",
+      " 'SULIS ADYANA, S.Pd., M.Pd - N201701'\n",
+      " 'ANDI DANANG KRISMAWAN, S.Kom, M.Kom - AF201702'\n",
+      " 'ANDI DANANG KRISMAWAN, S.Kom, M.Kom - U201704'\n",
+      " 'ANDI DANANG KRISMAWAN, S.Kom, M.Kom - AF201704'\n",
+      " \"ANIS NI'AM IMANA, S.H.I, M.E - N2017051\"\n",
+      " 'FILMADA OCKY SAPUTRA, M.Eng - A11.54403'\n",
+      " 'ARDIAWAN BAGUS HARISA, S.Kom, M.Sc - A11.54837'\n",
+      " 'ARDIAWAN BAGUS HARISA, S.Kom, M.Sc - A11.54105'\n",
+      " 'ARFIKA PERTIWI PUTRI, M.I.Kom - AF201703'\n",
+      " 'MOCH. SJAMSUL HIDAJAT, S.E., M.M - A11.54205'\n",
+      " 'MOCH. SJAMSUL HIDAJAT, S.E., M.M - AF201702'\n",
+      " 'BONIFACIUS VICKY INDRIYONO, S.Kom., M.Kom - A11.54505'\n",
+      " 'CHOERUL UMAM, S.Kom., M.M - A11.54835'\n",
+      " 'IQLIMA ZAHARI, S.Pd.I, M.Pd.I - N201706'\n",
+      " 'DIBYO ADI WIBOWO, S.Si., M.Si - A11.54508'\n",
+      " 'DIBYO ADI WIBOWO, S.Si., M.Si - A11.54812'\n",
+      " 'DEWI PERGIWATI, S.Kom., M.Kom - AF201704'\n",
+      " 'AYU ASHARI, S.S.T, M.Kes - U201701']\n"
+     ]
+    }
+   ],
+   "source": [
+    "df4 = df.copy()\n",
+    "\n",
+    "for i in range (len(df4)):\n",
+    "    df4.loc[i, 'dosen'] = df4.loc[i, 'dosen'] + str(\" - \") + df4.loc[i, 'kdmk']\n",
+    "\n",
+    "print(len(df4['dosen'].unique()))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -645,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +989,7 @@
        "[20097 rows x 4 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +1011,7 @@
        "(0.9059330153141515, array([0.904, 0.908]))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +1164,7 @@
        "[20097 rows x 5 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +1186,7 @@
        "(0.8954850845946283, array([0.893, 0.898]))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1339,7 @@
        "[252 rows x 5 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1459,7 @@
        "1     Teaching Skill      0.89"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
