--- a/DSS-SAW-Mark8.ipynb
+++ b/DSS-SAW-Mark8.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "[20097 rows x 16 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
        "[20097 rows x 16 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
        "[20097 rows x 12 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
        "[20097 rows x 11 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1400,7 @@
        "[20097 rows x 11 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,19 +1444,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Administrator\\AppData\\Local\\Temp\\ipykernel_28780\\1810081016.py:8: FutureWarning:\n",
-      "\n",
-      "Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1560,7 +1550,7 @@
        "[20097 rows x 2 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1573,9 +1563,13 @@
     "for i in range (0,10):\n",
     "    df4[f'q{i+1}'] = df4[f'q{i+1}'] * weights[i]\n",
     "\n",
+    "code_list = df4['Code']\n",
+    "df4 = df4.drop(['Code'], axis=1)\n",
     "df4['Total'] = df4.sum(axis=1)\n",
     "\n",
     "df4 = df4.drop(['q1','q2','q3','q4','q5','q6','q7','q8','q9','q10'], axis=1)\n",
+    "\n",
+    "df4.insert(loc=0, column='Code', value=code_list)\n",
     "\n",
     "df4"
    ]
@@ -1589,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1695,7 +1689,7 @@
        "[20097 rows x 2 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1709,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1725,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1843,7 +1837,7 @@
        "[134 rows x 3 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1861,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1991,7 +1985,7 @@
        "[134 rows x 4 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2004,7 +1998,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lecturer</th>\n",
+       "      <th>TotalScore</th>\n",
+       "      <th>StudentCount</th>\n",
+       "      <th>NormalizedValue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Respondent99</td>\n",
+       "      <td>60.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Respondent81</td>\n",
+       "      <td>90.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Respondent63</td>\n",
+       "      <td>60.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Respondent62</td>\n",
+       "      <td>30.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Respondent49</td>\n",
+       "      <td>30.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>129</th>\n",
+       "      <td>Respondent131</td>\n",
+       "      <td>24.50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130</th>\n",
+       "      <td>Respondent50</td>\n",
+       "      <td>4552.25</td>\n",
+       "      <td>186</td>\n",
+       "      <td>24.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131</th>\n",
+       "      <td>Respondent55</td>\n",
+       "      <td>13898.00</td>\n",
+       "      <td>568</td>\n",
+       "      <td>24.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132</th>\n",
+       "      <td>Respondent134</td>\n",
+       "      <td>23.25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133</th>\n",
+       "      <td>Respondent76</td>\n",
+       "      <td>22.50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22.50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>134 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Lecturer  TotalScore  StudentCount  NormalizedValue\n",
+       "0     Respondent99       60.00             2            30.00\n",
+       "1     Respondent81       90.00             3            30.00\n",
+       "2     Respondent63       60.00             2            30.00\n",
+       "3     Respondent62       30.00             1            30.00\n",
+       "4     Respondent49       30.00             1            30.00\n",
+       "..             ...         ...           ...              ...\n",
+       "129  Respondent131       24.50             1            24.50\n",
+       "130   Respondent50     4552.25           186            24.47\n",
+       "131   Respondent55    13898.00           568            24.47\n",
+       "132  Respondent134       23.25             1            23.25\n",
+       "133   Respondent76       22.50             1            22.50\n",
+       "\n",
+       "[134 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sort by normalized value\n",
+    "df11 = df10.copy()\n",
+    "df11 = df11.sort_values(by=['NormalizedValue'], ascending=False).reset_index(drop=True)\n",
+    "df11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2017,7 +2155,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2029,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3053,7 +3191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
